apps/cli/src/tui/widgets/snapshots/confirmprompt__with_recovery.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===

   ┏━ › ⚠  Rebase ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
   ┃ Rebase feat/parser of claude-1 onto main?                    ┃
   ┃  ⟲ A snapshot is taken first: u undoes it                    ┃
   ┃                                                              ┃
   ┃                                         › [No]    [Rebase]   ┃
   ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛

=== styles (truecolor, unicode) ===
1:3-10 fg=#ffe066
1:11-16 fg=#ffe066 BOLD
1:17-66 fg=#ffe066
2:3-3 fg=#ffe066
2:5-45 BOLD
2:66-66 fg=#ffe066
3:3-3 fg=#ffe066
3:6-6 fg=#3fb950
3:8-45 fg=#3fb950
3:66-66 fg=#ffe066
4:3-3 fg=#ffe066
4:66-66 fg=#ffe066
5:3-3 fg=#ffe066
5:45-45 fg=#ffe066 BOLD
5:47-50 fg=#ffe066 BOLD
5:55-62 fg=#949494
5:66-66 fg=#ffe066
6:3-66 fg=#ffe066
=== styles (256, unicode) ===
1:3-10 fg=@221
1:11-16 fg=@221 BOLD
1:17-66 fg=@221
2:3-3 fg=@221
2:5-45 BOLD
2:66-66 fg=@221
3:3-3 fg=@221
3:6-6 fg=@35
3:8-45 fg=@35
3:66-66 fg=@221
4:3-3 fg=@221
4:66-66 fg=@221
5:3-3 fg=@221
5:45-45 fg=@221 BOLD
5:47-50 fg=@221 BOLD
5:55-62 fg=@246
5:66-66 fg=@221
6:3-66 fg=@221
=== styles (16, unicode) ===
1:3-10 fg=LightYellow
1:11-16 fg=LightYellow BOLD
1:17-66 fg=LightYellow
2:3-3 fg=LightYellow
2:5-45 BOLD
2:66-66 fg=LightYellow
3:3-3 fg=LightYellow
3:6-6 fg=Green
3:8-45 fg=Green
3:66-66 fg=LightYellow
4:3-3 fg=LightYellow
4:66-66 fg=LightYellow
5:3-3 fg=LightYellow
5:45-45 fg=LightYellow BOLD
5:47-50 fg=LightYellow BOLD
5:55-62 fg=DarkGray
5:66-66 fg=LightYellow
6:3-66 fg=LightYellow
=== styles (no-color, unicode) ===
1:3-66 BOLD | REVERSED
2:3-3 BOLD | REVERSED
2:5-45 BOLD
2:66-66 BOLD | REVERSED
3:3-3 BOLD | REVERSED
3:66-66 BOLD | REVERSED
4:3-3 BOLD | REVERSED
4:66-66 BOLD | REVERSED
5:3-3 BOLD | REVERSED
5:45-45 BOLD | REVERSED
5:47-50 BOLD | REVERSED
5:55-62 DIM
5:66-66 BOLD | REVERSED
6:3-66 BOLD | REVERSED
=== styles (high-contrast, unicode) ===
1:3-10 fg=#ffe066 bg=#000000
1:11-16 fg=#ffe066 bg=#000000 BOLD
1:17-66 fg=#ffe066 bg=#000000
2:3-3 fg=#ffe066 bg=#000000
2:4-4 fg=#ffffff bg=#000000
2:5-45 fg=#ffffff bg=#000000 BOLD
2:46-65 fg=#ffffff bg=#000000
2:66-66 fg=#ffe066 bg=#000000
3:3-3 fg=#ffe066 bg=#000000
3:4-5 fg=#ffffff bg=#000000
3:6-6 fg=#7ee787 bg=#000000
3:7-7 fg=#ffffff bg=#000000
3:8-45 fg=#7ee787 bg=#000000
3:46-65 fg=#ffffff bg=#000000
3:66-66 fg=#ffe066 bg=#000000
4:3-3 fg=#ffe066 bg=#000000
4:4-65 fg=#ffffff bg=#000000
4:66-66 fg=#ffe066 bg=#000000
5:3-3 fg=#ffe066 bg=#000000
5:4-44 fg=#ffffff bg=#000000
5:45-45 fg=#ffe066 bg=#000000 BOLD
5:46-46 fg=#ffffff bg=#000000
5:47-50 fg=#ffe066 bg=#000000 BOLD
5:51-54 fg=#ffffff bg=#000000
5:55-62 fg=#c6c6c6 bg=#000000
5:63-65 fg=#ffffff bg=#000000
5:66-66 fg=#ffe066 bg=#000000
6:3-66 fg=#ffe066 bg=#000000
=== text (ascii) ===

   #= > [!] Rebase ===============================================#
   # Rebase feat/parser of claude-1 onto main?                    #
   #  [undo] A snapshot is taken first: u undoes it               #
   #                                                              #
   #                                         > [No]    [Rebase]   #
   #==============================================================#

=== styles (truecolor, ascii) ===
1:3-11 fg=#ffe066
1:12-17 fg=#ffe066 BOLD
1:18-66 fg=#ffe066
2:3-3 fg=#ffe066
2:5-45 BOLD
2:66-66 fg=#ffe066
3:3-3 fg=#ffe066
3:6-11 fg=#3fb950
3:13-50 fg=#3fb950
3:66-66 fg=#ffe066
4:3-3 fg=#ffe066
4:66-66 fg=#ffe066
5:3-3 fg=#ffe066
5:45-45 fg=#ffe066 BOLD
5:47-50 fg=#ffe066 BOLD
5:55-62 fg=#949494
5:66-66 fg=#ffe066
6:3-66 fg=#ffe066
